2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/20_asmMain.deca
// Description:
//    Programme :appelle de asm dans main
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
   int getX() asm(
    "hello everyone !"
   );
}

{
   A a = new A() ;
   println("a.getX() = ", a.getX()) ;
}

