2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/24_AsmSansSemi.deca
// Description:
//    Programme mal utilisantion de asm sans ';'
// Resultats:
//      Programme incorrecte syntaxiquement : 10:0: missing ';' at '}'
// Historique:
//    cree le 17/01/2023
class AB {
    int f;
    void getF() asm ("hello") 
}